force-app/main/default/objects/Bank__c/fields/Bank_Type__c.field-meta.xml
<CustomField>
    <fullName>Bank_Type__c</fullName>
    <label>Bank Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>