force-app/main/default/objects/Bank__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <referenceTo>Manager__c</referenceTo>
    <relationshipLabel>Banks</relationshipLabel>
    <relationshipName>Banks</relationshipName>
    <type>Lookup</type>
</CustomField>