force-app/main/default/objects/Bank__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>IFSC_Number__c</columns>
    <columns>Bank_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>